# libsettings

./: CMakeLists.txt  COPYING  README.md  bsd-install.sh  install.sh  win-install.bat
lib/: CMakeLists.txt  lib.pro  settings.cxx  settings.hh
test/: CMakeLists.txt  main.cxx  settings.xml  test.pro
